Add Controllers and adjust security config